# launch-cli

./: .gitignore  .secrets.baseline  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/workflows/: codeql.yml  release.yaml  test.yaml
launch/: __init__.py  entrypoint.py  env.py  update.py
launch/cli/: entrypoint.py
launch/cli/aws/: __init__.py
launch/cli/aws/pipeline/: __init__.py
launch/cli/github/: __init__.py
launch/cli/github/access/: commands.py
launch/cli/github/hooks/: commands.py
launch/github/: access.py  auth.py  hooks.py  repo.py
launch/local_repo/: branch.py  tags.py
src/launch/cli/github/access/: __init__.py
src/launch/cli/github/hooks/: __init__.py
src/launch/cli/github/version/: __init__.py  commands.py
src/launch/github/: access.py  repo.py  tags.py
src/launch/local_repo/: predict.py
test/: conftest.py
test/unit/: test_cli.py  test_env.py  test_update.py
test/unit/github/: test_access.py  test_hooks.py  test_tags.py
test/unit/local_repo/: test_branch.py  test_predict.py  test_tags.py
tests/: conftest.py
tests/unit/: test_cli.py
tests/unit/github/: test_access.py  test_auth.py  test_hooks.py
tests/unit/local_repo/: test_branch.py
